--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <section id="downloads">
         <span class="inner">
-          <a href="https://github.com/xgqfrms-GitHub/angular2/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/xgqfrms-GitHub/angular2/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+          <a href="https://github.com/xgqfrms-GitHub/angular2/" class="zip"><em>https://github.com/xgqfrms-GitHub/angular2/</em></a>
         </span>
       </section>
 
